Add in-cluster config support in FedLCM k8s deployment mode - server side
So user doesn't need to provide kubeconfig content if they just want to use the k8s cluster that FedLCM runs on.
