# server/application/service/infra_provider_service.go
@@ -58,6 +58,7 @@ type InfraProviderListItemKubernetes struct {
 type InfraProviderKubernetesConfig struct {
 	KubeConfig         string                         `json:"kubeconfig_content"`
 	Namespaces         []string                       `json:"namespaces_list"`
+	IsInCluster        bool                           `json:"is_in_cluster"`
 	RegistryConfigFATE valueobject.KubeRegistryConfig `json:"registry_config_fate"`
 }
 
@@ -135,6 +136,7 @@ func (app *InfraProviderApp) CreateProvider(providerInfo *InfraProviderCreationR
 			},
 			Config: valueobject.KubeConfig{
 				KubeConfigContent: providerInfo.KubernetesProviderInfo.KubeConfig,
+				IsInCluster:       providerInfo.KubernetesProviderInfo.IsInCluster,
 				NamespacesList:    providerInfo.KubernetesProviderInfo.Namespaces,
 			},
 			RegistryConfigFATE: providerInfo.KubernetesProviderInfo.RegistryConfigFATE,
@@ -188,6 +190,7 @@ func (app *InfraProviderApp) GetProviderDetail(uuid string) (*InfraProviderDetai
 			InfraProviderKubernetesConfig: InfraProviderKubernetesConfig{
 				KubeConfig:         domainProvider.Config.KubeConfigContent,
 				Namespaces:         domainProvider.Config.NamespacesList,
+				IsInCluster:        domainProvider.Config.IsInCluster,
 				RegistryConfigFATE: domainProvider.RegistryConfigFATE,
 			},
 		},
@@ -208,6 +211,7 @@ func (app *InfraProviderApp) UpdateProvider(uuid string, updateProviderInfo *Inf
 			Config: valueobject.KubeConfig{
 				KubeConfigContent: updateProviderInfo.KubernetesProviderInfo.KubeConfig,
 				NamespacesList:    updateProviderInfo.KubernetesProviderInfo.Namespaces,
+				IsInCluster:       updateProviderInfo.KubernetesProviderInfo.IsInCluster,
 			},
 			RegistryConfigFATE: updateProviderInfo.KubernetesProviderInfo.RegistryConfigFATE,
 			Repo:               app.InfraProviderKubernetesRepo,
