# server/docs/swagger.json
@@ -4544,6 +4544,9 @@
                 "api_server": {
                     "type": "string"
                 },
+                "is_in_cluster": {
+                    "type": "boolean"
+                },
                 "kubeconfig_content": {
                     "type": "string"
                 },
@@ -4561,6 +4564,9 @@
         "service.InfraProviderKubernetesConfig": {
             "type": "object",
             "properties": {
+                "is_in_cluster": {
+                    "type": "boolean"
+                },
                 "kubeconfig_content": {
                     "type": "string"
                 },
@@ -5194,6 +5200,10 @@
         "valueobject.KubeConfig": {
             "type": "object",
             "properties": {
+                "is_in_cluster": {
+                    "description": "IsInCluster indicates this config can be used for in cluster actions, meaning the KubeConfig content can be empty",
+                    "type": "boolean"
+                },
                 "kubeconfig_content": {
                     "description": "KubeConfigContent stores the kubeconfig file of a K8s cluster",
                     "type": "string"
